--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,1 +1,30 @@
+* {
+  box-sizing: border-box;
+}
 
+head,
+body {
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  padding: 20px 5px 20px 5px;
+  background: darkgrey;
+  color: white;
+  margin: 0;
+  text-transform: uppercase;
+  font-size: 20px;
+}
+
+header p {
+  color: lightgrey;
+}
+fieldset {
+  border: none;
+}
+
+input[type="text"]::placeholer {
+  text-align: right;
+}
