--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,9 +4,31 @@
 
 head,
 body {
-  text-align: center;
+  font-family: 'Open Sans', sans-serif;
   margin: 0;
   padding: 0;
+}
+
+form {
+  max-width: 100%;
+}
+
+input[type="text"],
+select {
+  width: 70%;
+  height: 35px;
+  border-style: none;
+  background-color: lightgrey;
+  border-radius: 4px;
+}
+
+input[id="zip"]{
+  width: 40%;
+}
+
+input[id="textarea"] {
+  width: 70%;
+  height: 100px;
 }
 
 h1 {
@@ -15,16 +37,60 @@ h1 {
   color: white;
   margin: 0;
   text-transform: uppercase;
-  font-size: 20px;
+  font-weight: bolder;
+  text-align: center;
+}
+
+h2 {
+  font-weight: bold;
+  text-align: center;
 }
 
 header p {
-  color: lightgrey;
+  color: grey;
+  text-align: center;
 }
+
 fieldset {
   border: none;
 }
 
-input[type="text"]::placeholer {
+legend {
+  font-size: 24px;
+  font-weight: bold;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+::placeholder {
   text-align: right;
+  padding: 3px;
+  font-style: italic;
+  font-size: 12px;
+}
+
+input:focus,
+textarea:focus,
+select {
+  outline-color: #00BFFF;
+}
+
+select {
+  font-family: 'Open Sans', sans-serif;
+}
+
+#top {
+  height: 5px;
+  background-color: black;
+  margin: 0 15px 0 15px;
+}
+
+hr {
+  background-color: black;
+  margin: 3px 15px 10px 15px;
+}
+
+footer {
+  font-style: italic;
+  text-align: center;
 }
