--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -12,6 +12,7 @@ body {
 form {
   max-width: 100%;
 }
+
 h1 {
 padding: 20px 5px 20px 5px;
 background: #001a33;
@@ -52,7 +53,7 @@ input[id="textarea"] {
 }
 
 fieldset,
-textarea,
+textarea
 input[type="button"] {
   border: none;
 }
@@ -77,10 +78,9 @@ label {
   font-size: 12px;
 }
 
-input:focus,
+input,
 textarea:focus,
-select:focus,
-input[type="button"]:focus {
+select:focus {
   outline-color: #00BFFF;
 }
 
@@ -136,4 +136,25 @@ footer {
   padding-bottom: 20px;
   font-size: 12px;
   color: grey;
+}
+
+@media (min-width: 768px) {
+
+.container {
+  display: flex;
+  flex-direction: row;
+  flex-basis: 50%
+}
+
+label {
+  flex-basis: 10%;
+}
+
+
+
+
+
+
+
+
 }
