--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -39,8 +39,15 @@ select {
   width: 100%;
   height: 35px;
   border-style: none;
-  background-color: lightgrey;
   border-radius: 6px;
+  background-color: lightgrey;
+  transition: 2s;
+}
+
+input:hover,
+textarea:hover,
+select:hover {
+  background-color: #ebf8ff;
 }
 
 input[id="zip"]{
@@ -54,7 +61,7 @@ input[id="textarea"] {
 
 fieldset,
 textarea
-input[type="button"] {
+input[type="submit"] {
   border: none;
 }
 
@@ -101,16 +108,17 @@ textarea {
   margin-top: 20px;
   background-color: lightgrey;
   border-radius: 6px;
+  transition: 2s;
 }
 
-input[type="button"] {
+input[type="submit"] {
   width: 100%;
   height: 60px;
   font-size: 18px;
   font-family: 'Open Sans', sans-serif;
   font-weight: bold;
   border-radius: 6px;
-  background-color: #008B8B;
+  background-color: #2bad9c;
   color: white;
   margin-top: 20px;
 }
@@ -137,6 +145,7 @@ footer {
   font-size: 12px;
   color: grey;
 }
+
 
 @media (min-width: 768px) {
 
